--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
 body {
     text-align: center;
 }
+
 #gamearea {
     /*width:60%;*/
-    border:1px solid black;
+    border: 1px solid black;
+    /*touch-action: none;*/
 }
